--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
   <h1>Gerenciador de Times</h1>
 
   <div id="times">
-    <h2>Time AMARELO</h2>
-    <ul id="lista-amarelo"></ul>
-
-    <h2>Time AZUL</h2>
-    <ul id="lista-azul"></ul>
+    <div class="time"> 
+      <img src="/Amarelo FC.jpg" alt="Time Amarelo" class="time-imagem">
+      <h2>Time AMARELO</h2>
+      <ul id="lista-amarelo"></ul>
+    </div>
+  
+    <div class="time">
+      <img src="/Gemini_Generated_Image_h604zhh604zhh604.jpg" alt="Time Azul" class="time-imagem">
+      <h2>Time AZUL</h2>
+      <ul id="lista-azul"></ul>
+    </div>
 
     <h2>Ausentes</h2>
     <ul id="lista-ausentes"></ul>
