--- a/cadastro.html
+++ b/cadastro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="cadastro.css"> 
+  <link rel="stylesheet" href="/cadastro.css"> 
   <title>Cadastro de Jogador</title>
   <style>
     /* Estilos para o formulário */
