--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Gerenciador de Times</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload="atualizarListaJogadores()">
@@ -12,13 +12,13 @@
 
   <div id="times">
     <div class="time"> 
-      <img src="/Amarelo FC.jpg" alt="Time Amarelo" class="time-imagem">
+      <img src="Amarelo FC.jpg" alt="Time Amarelo" class="time-imagem">
       <h2>Time AMARELO</h2>
       <ul id="lista-amarelo"></ul>
     </div>
   
     <div class="time">
-      <img src="/Gemini_Generated_Image_h604zhh604zhh604.jpg" alt="Time Azul" class="time-imagem">
+      <img src="Gemini_Generated_Image_h604zhh604zhh604.jpg" alt="Time Azul" class="time-imagem">
       <h2>Time AZUL</h2>
       <ul id="lista-azul"></ul>
     </div>
