--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html>
 
 <head>
+  <style>
+    a {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px;
+  background-color: #007bff; /* Cor de fundo azul */
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease; /* Adiciona uma transição suave   
+ na cor de fundo */
+}
+
+a:hover {
+  background-color: #0056b3; /* Cor de fundo azul mais escura ao passar o mouse */
+}
+  </style>
   <title>Gerenciador de Times</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
+<a href="./login.html">Logar</a>
+<a href="./cadastro.html">Cadastrar</a>
 <body onload="atualizarListaJogadores()">
 
   <h1>Gerenciador de Times</h1>
